# serial-watchdog-relay

./: .gitignore  CMakeLists.txt  readme.md  sdkconfig.defaults
main/: CMakeLists.txt  config.h  led_status.c  led_status.h  main.c  nvs_storage.c  nvs_storage.h  oled_display.c  oled_display.h  relay_controller.c  relay_controller.h  serial_command.c  serial_command.h  serial_handler.c  serial_handler.h  watchdog_timer.c  watchdog_timer.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
server/: watchdog-relay.conf.example  watchdog-relay.service  watchdog_cli.py  watchdog_daemon.py
